[tool.poetry]
name = "fastapi-admin-tmpl"
version = "0.1.0"
description = ""
authors = ["Grant Zhang <grant.zhang.s@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
pydantic = { version = "^1.8.2", extras = ["dotenv", "email"] }
uvicorn = "^0.15.0"
sqlalchemy = { version = "^1.4.25", extras = ["asyncio"] }
asyncpg = "^0.24.0"
alembic = "^1.7.3"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"
jinja2 = "^3.0.2"
aiosmtplib = "^1.1.6"
loguru = "^0.5.3"
sentry-sdk = "^1.5.0"
dependency-injector = "^4.37.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
black = "^21.9-beta.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pre-commit = "^2.16.0"
sqlalchemy2-stubs = "^0.0.2-alpha.19"


[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httpx = "^0.21.1"


[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.black]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
